Fix image paths.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <button class="carousel-button prev">&#10094;</button>
     <div class="carousel-container">
       <div class="carousel-track">
-        <img src="/images/IMG_6.jpg" alt="Placeholder 6" class="carousel-slide" />
-        <img src="/images/IMG_19.jpg" alt="Placeholder 19" class="carousel-slide" />
-        <img src="/images/IMG_3.jpg" alt="Placeholder 3" class="carousel-slide" />
-        <img src="/images/IMG_13.jpg" alt="Placeholder 13" class="carousel-slide" />
-        <img src="/images/IMG_5.jpg" alt="Placeholder 14" class="carousel-slide" />
-        <img src="/images/IMG_12.jpg" alt="Placeholder 15" class="carousel-slide" />
+        <img src="images/IMG_6.jpg" alt="Placeholder 6" class="carousel-slide" />
+        <img src="images/IMG_19.jpg" alt="Placeholder 19" class="carousel-slide" />
+        <img src="images/IMG_3.jpg" alt="Placeholder 3" class="carousel-slide" />
+        <img src="images/IMG_13.jpg" alt="Placeholder 13" class="carousel-slide" />
+        <img src="images/IMG_5.jpg" alt="Placeholder 14" class="carousel-slide" />
+        <img src="images/IMG_12.jpg" alt="Placeholder 15" class="carousel-slide" />
       </div>
     </div>
     <button class="carousel-button next">&#10095;</button>
