Add image link because Partiful doesn't allow iframes.

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     </p>
   </section>
 
-  <!-- Upcoming Screenings: now an iframe to Partiful -->
+  <!-- Upcoming Screenings -->
   <section class="upcoming-screenings">
     <h2>Upcoming Screenings</h2>
-    <iframe
-      src="https://partiful.com/e/dSBMQefaioY5lun7PVGK"
-      style="width:100%; height:600px; border:none;">
-    </iframe>
+    <a href="https://partiful.com/e/dSBMQefaioY5lun7PVGK" target="_blank" class="event-link">
+      <img src="event_images/event_1.png" alt="Next screening details" class="event-image">
+    </a>
   </section>
 
   <script src="script.js"></script>
